--- a/db/Dockerfile
+++ b/db/Dockerfile
@@ -1,5 +1,5 @@
 FROM mysql:latest
 
-COPY ./docker-entrypoint-initdb.d/ ./docker-entrypoint-initdb.d/
+COPY ./init/ ./docker-entrypoint-initdb.d/
 
 CMD ["mysqld"]
