--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,9 +12,5 @@ services:
       
   db:
     build: ./db/
-    environment: 
-      MYSQL_ROOT_PASSWORD: 'my-secret-pw'
-      MYSQL_DATABASE: db1
-      MYSQL_USER: web
-      MYSQL_PASSWORD: 1Qaz2wsx
+    env_file: ./db/db.env
     
